--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Posts</h1>
-<h2>First editing</h2>
+<h2>First editing complete</h2>
 <table>
   <thead>
     <tr>
